<resources>
    <string name="app_name">GymBuddy</string>
    <string name="welcome">Welcome to GYMBUDDY</string>
    <string name="comp">Your personal training companion</string>
    <string name="login">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="support">Support</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="mail">E-mail</string>
    <string name="conf_pass">Confirm password</string>
    <string name="setup_prof">Set up your profile</string>
    <string name="edit_stats">Edit stats</string>
    <string name="up_video">Upload video</string>
    <string name="cont">Continue</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="choose_exercise">Choose an exercise</string>
    <string name="chest">Chest</string>
    <string name="arms">Arms</string>
    <string name="back">Back</string>
    <string name="find_program">Find your Program</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="w_h">Insert your weight and height:</string>
    <string name="information">*This information will remain private. The only use for it is to find a program that will fit you best!</string>
    <string name="train_frequency">How often will you be training this week?</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="days">days</string>
    <string name="next">Continue</string>
    <string name="recommendations">Recommended workout plan</string>
    <string name="day_1">Day 1: Chest and Arms</string>
    <string name="day_2">Day 2: Back and Shoulders</string>
    <string name="day_3">Day 3: Legs and abs</string>
    <string name="different_workout">Choose another workout plan</string>
    <string name="ranking">Ranking</string>
    <string name="pick_exe">Choose an exercise</string>
    <string name="deadlift">Deadlift</string>
    <string name="seated">Seated Cable Row</string>
    <string name="enter_kgs">Enter how many kgs you attempt</string>
    <string name="kgs">kgs</string>
    <string name="upload">Upload a video as proof of your success!</string>
    <string name="choose_from">Choose from your collection.</string>
    <string name="upload_video">Upload video</string>
    <string name="dumbbell">Dumbbell bench press</string>
    <string name="confirm_upload">Confirm Upload</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="watch_video">Watch video</string>
    <string name="home">Home</string>
    <string name="start">Start a workout</string>
    <string name="view">View workout plan</string>
    <string name="find">Find a personal trainer</string>
    <string name="search">Search for a GymBuddy</string>
    <string name="workout">Workout</string>
    <string name="choose">Choose a workout routine</string>
    <string name="pull">Pull</string>
    <string name="push">Push</string>
    <string name="legs">Legs</string>
    <string name="none">null</string>
    <string name="workout2">Workout - Pull</string>
    <string name="choose2">Choose an exercise</string>
    <string name="dips">Dips</string>
    <string name="pull_ups">Pull Ups</string>
    <string name="bench_row">Bench Row</string>
    <string name="lat_pulldown">Lat Pulldown</string>
    <string name="logo"> </string>
    <string name="seated_cable">Seated Cable Row</string>
    <string name="french_press">French Press</string>
    <string name="triceps_pressdown">Triceps Pressdown</string>
    <string name="congratulations">Congratulations! You completed the workout in 1h 28min.</string>
    <string name="keep_it">Keep It Up!</string>
    <string name="imageprof">ImageProf</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="entercomp">Enter Competition</string>


    <!-- Upload Video strings -->
    <string name="uv_confirm_upload">Upload video for %1$s!</string>
    <!-- Admin checks reports strings -->
    <string name="report_list">Report List</string>
    <string name="report1">Report 1</string>
    <string name="report2">Report 2</string>
    <string name="report3">Report 3</string>


    <!-- Find Gym strings -->
    <string name="mapView">Map</string>
    <string name="title_activity_gyms_in_area_boundary">GymsInAreaBoundary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">login</string>
    <string name="reject">Reject</string>


</resources>