<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/pull2_img">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/main_color" >
        <TextView
            android:id="@+id/workout_pull"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/workout2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/choose_exercise"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aoboshi_one_regular"
        android:text="@string/choose2"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="20sp" />
    <Button
        android:id="@+id/dips_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/dips"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/pull_ups_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/pull_ups"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/bench_row_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/bench_row"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/lat_pull_down_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/lat_pulldown"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/seated_cable_row_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/seated_cable"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/french_press_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/french_press"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/triceps_pressdown_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/triceps_pressdown"
        android:textAllCaps="false"
        app:backgroundTint="#00FFFFFF"
        android:textColor="@color/main_color"
        android:fontFamily="@font/aoboshi_one_regular"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />







</LinearLayout>