<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/main_color" >

        <TextView
            android:id="@+id/find_your_program"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/find_program"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recommend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:fontFamily="@font/aoboshi_one_regular"
        android:text="@string/recommendations"
        android:textColor="@color/main_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/day_1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/day_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/day_2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/day_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/day_3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/day_3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/qn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/different_workout"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />





</LinearLayout>