<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/main_color" >

        <TextView
            android:id="@+id/find_your_program"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/find_program"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/beginner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/beginner"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/intermediate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/intermediate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/advanced"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/advanced"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/insert"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aoboshi_one_regular"
        android:text="@string/w_h"
        android:textColor="@color/main_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/information"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/information"
            android:textColor="@color/main_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/wei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one_regular"
                android:hint="@string/weight"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="8dp" />

            <EditText
                android:id="@+id/hei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one_regular"
                android:hint="@string/height"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="8dp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/frequency"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/train_frequency"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/aoboshi_one_regular"
            android:hint="@string/days"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp" />





    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />


</LinearLayout>

