<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/main_color" >

        <TextView
            android:id="@+id/ranking"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/aoboshi_one_regular"
            android:text="@string/ranking"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/choose"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="70dp"
        android:fontFamily="@font/aoboshi_one_regular"
        android:text="@string/pick_exe"
        android:textColor="@color/main_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deadlift"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/deadlift"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/pull"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/pull_ups"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bench"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/bench_row"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/lat"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/lat_pulldown"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/seated"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/seated"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/back_pull_up"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="188dp"
            app:backgroundTint="@color/main_color"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>









    

</LinearLayout>