<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/main_color" >

        <TextView
            android:id="@+id/setup_prof"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/setup_prof"
            android:textSize="20sp"
            android:fontFamily="@font/aoboshi_one_regular"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/view2"
        app:cardCornerRadius="60dp"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imageprof"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/aoboshi_one_regular"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


    <Button
        android:id="@+id/editStats_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/edit_stats"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/upVideo_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/up_video"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/BecomeTrainer_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/main_color"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/support"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        app:backgroundTint="#00FFFFFF"
        android:text="@string/support"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/grey"
        tools:ignore="TextContrastCheck" />
</LinearLayout>